<resources>
    <string name="app_name">IIAM</string>
    <string name="welcome">Welcome!</string>
    <string name="iiam_is_a_personal_and_medical_passport_for_all_individuals">IIAM is a personal and medical passport for all individuals.</string>
    <string name="returning_user">Returning User</string>
    <string name="new_user">New User</string>
    <string name="hello">Hello</string>
    <string name="there">there,</string>
    <string name="welcome_to">Welcome to</string>
    <string name="iiam">IIAM</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="text_agree_terms_policies_sign_up">By Creating New Account, you agree to our\nTerms &amp; Conditions.</string>
    <string name="terms_and_conditions">Terms &amp; Conditions.</string>
    <string name="terms_and_conditions_title">Terms &amp; Conditions</string>
    <string name="returning_user_login">Returning User Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_account">Don’t have an account? Create Account</string>
    <string name="create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="andrea_james">Andrea James</string>
    <string name="reset_password">Please check your email for instructions to reset the password.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="send_summary">Send Summary</string>
    <string name="send_medications_list">Send Medications List</string>
    <string name="account_settings">Account Settings</string>
    <string name="recipient_email">Recipient Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="submit">Submit</string>
    <string name="delete_account_information">Delete Account Information</string>
    <string name="change_password">Change Password</string>
    <string name="signout">Signout</string>
    <string name="are_you_sure_you_want_to_signout">Are you sure you want to signout?</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="about_me">About Me</string>
    <string name="about_me_">About Me:</string>
    <string name="notes_">Notes:</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_personal_info_available">No Personal Info Available</string>
    <string name="personal_info">Personal Info</string>
    <string name="no_notes_data_available">No Notes Data Available</string>
    <string name="lorem_ipsum_dummy_text">Lorem Ipsum is simply dummy text of the\nprinting and typesetting industry.</string>
    <string name="options">Options</string>
    <string name="add_biographic_information">Add biographic information</string>
    <string name="edit_biographic_information">Edit biographic information</string>
    <string name="add_note_">Add note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm!</string>
    <string name="picture">Picture</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="biographic_info">Biographic Info</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="preferred_name">Preferred Name</string>
    <string name="age">Age</string>
    <string name="allergies">Allergies</string>
    <string name="phone_number">Phone Number</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="yrs">Yrs</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="more_info">Please view the below content for additional information about</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="comment">Comment</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_note_">Edit note</string>
    <string name="delete_note">Delete note</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="remove_media">Remove media</string>
    <string name="remove_image">Remove image</string>
    <string name="abilities">Abilities</string>
    <string name="abilities_">Abilities:</string>
    <string name="no_abilities">No Abilities Data Available</string>
    <string name="add_abilities">Add abilities</string>
    <string name="add_abilities_">Add Abilities</string>
    <string name="edit_abilities">Edit Abilities</string>
    <string name="ability">Ability</string>
    <string name="comments">Comments</string>
    <string name="task">Task</string>
    <string name="edit_ability">Edit ability</string>
    <string name="delete_ability">Delete ability</string>
    <string name="are_you_sure_you_want_to_delete_this_ability">Are you sure you want to delete this ability?</string>
    <string name="select_task">Select task</string>
    <string name="can_independently_perform_task">Can independently perform task</string>
    <string name="can_partly_perform_task">Can partly perform task</string>
    <string name="needs_help_performing_task">Needs help performing task</string>
    <string name="fields_detected">Fields Detected</string>
    <string name="medications">Medications</string>
    <string name="medications_">Medications:</string>
    <string name="no_medications">No Medications Data Available</string>
    <string name="add_medications">Add medications</string>
    <string name="add_medications_">Add Medications</string>
    <string name="edit_medications_">Edit Medications</string>
    <string name="medication_name">Medication Name</string>
    <string name="route">Route</string>
    <string name="dose">Dose</string>
    <string name="additional_dose_info">Additional dose info</string>
    <string name="additional_route_info">Additional route info</string>
    <string name="frequency">Frequency</string>
    <string name="dose_unit">Dose unit</string>
    <string name="mg">mg</string>
    <string name="mg_ml">mg/ml</string>
    <string name="mcg_ml">mcg/ml</string>
    <string name="u_ml">U/ml</string>
    <string name="other">Other</string>
    <string name="select_route">Select route</string>
    <string name="oral">Oral</string>
    <string name="injection">Injection</string>
    <string name="ocular">Ocular</string>
    <string name="otic">Otic</string>
    <string name="edit_medication">Edit medication</string>
    <string name="delete_medication">Delete medication</string>
    <string name="are_you_sure_you_want_to_delete_this_medication">Are you sure you want to delete this medication?</string>
    <string name="conditions">Conditions</string>
    <string name="conditions_">Conditions:</string>
    <string name="no_conditions">No Conditions Data Available</string>
    <string name="add_conditions">Add Conditions</string>
    <string name="condition">Condition</string>
    <string name="symptoms">Symptoms</string>
    <string name="management">Management</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="edit_conditions">Edit Conditions</string>
    <string name="edit_condition">Edit condition</string>
    <string name="delete_condition">Delete Condition</string>
    <string name="are_you_sure_you_want_to_delete_this_condition">Are you sure you want to delete this condition?</string>
    <string name="records">Records</string>
    <string name="records_">Records:</string>
    <string name="no_records_available">No Records Data Available</string>
    <string name="take_picture_of_record">Take picture of record</string>
    <string name="document_name">Document Name</string>
    <string name="pages_in_document">Pages in document</string>
    <string name="add_records">Add Records</string>
    <string name="edit_records">Edit Records</string>
    <string name="edit_record">Edit record</string>
    <string name="delete_record">Delete records</string>
    <string name="are_you_sure_you_want_to_delete_this_record">Are you sure you want to delete this record?</string>
    <string name="summary">Summary</string>
    <string name="medications_summary">Medications Summary</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="you_reached_three_users_limit">You have reached the maximum of 3 logins in this device.</string>
    <string name="email_is_already_registered">Email is already registered!</string>
    <string name="we_cant_find_requested_user">We can\'t find requested User!</string>
    <string name="password_is_incorrect">Password is incorrect!</string>
    <string name="gmail_not_installed">Gmail is not installed</string>
    <string name="storage_permission_required">Storage permission required to generate pdf file!</string>
    <string name="network_error">Oops, the internet is not working. Please check the connection and try again.</string>
    <string name="error_user_not_found">ERROR_USER_NOT_FOUND</string>
</resources>