<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    tools:context=".medications.MedicationsBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_white_curve"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:context=".aboutme.AboutMeBottomSheetFragment">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextViewStyleMedium"
            android:layout_gravity="center"
            android:text="@string/options"
            android:textColor="@color/colorLightNavyBlue"
            android:textSize="@dimen/_12ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddMedications"
            style="@style/TextViewStyleMedium"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/add_medications"
            android:textColor="@color/colorGreenBlue"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/colorGrey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            style="@style/TextViewStyleMedium"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorGreenBlue"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</FrameLayout>