<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkNavyBlue"
    android:orientation="vertical"
    tools:context=".changepassword.ChangePasswordActivity">

    <include layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_white_top_corners"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_change_password_big" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCurrentPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCurrentPassword"
                    style="@style/EditTextStyleRegular"
                    android:hint="@string/current_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/tilNewPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNewPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewPassword"
                    style="@style/EditTextStyleRegular"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/tilConfirmNewPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmNewPassword"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmNewPassword"
                    style="@style/EditTextStyleRegular"
                    android:hint="@string/confirm_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                style="@style/ButtonStyleBold"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>